[project]
name = "pyglaze"
version = "0.1.0"
description = "README.md"
authors = [
    {name = "Bjørn Mølvig, email= bjoernmoelvig@gmail.com"},
    {name = "Mads Ehrhorn, email= mads.ehrhorn@gmail.com"},
]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "pyserial>=3.5",
    "scipy>=1.7.3",
    "bitstring>=4.1.2",
]

[project.optional-dependencies]
dev = [
    "click>=8.0.3",
    "ruff>=0.1.7",
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
    "mypy>=1.7.1",
    "mypy-extensions>=1.0.0",
    "toml>=0.10.2",
    "semver>=2.13.0",
    "types-pyserial>=3.5.0.8",
]

docs = [
    "mkdocs>=1.2.3",
    "mkdocs-material>=8.2.5",
    "mkdocstrings[python]>=0.18.1",
    "mike>=1.1.2",
    "Pygments>=2.12.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
addopts = "--cov=pyglaze"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:", # type checking is turned off at runtime
    "@(abc\\.)?abstractmethod", # abstract methods aren't executed
    ]

[tool.ruff]
target-version = "py39"
lint.select = ["ALL"]
lint.ignore = [
    "D100",   # allow undocumented public modules
    "D104",   # allow undocumented public package
    "D106",   # allow undocumented public nested class
    "D107",   # allow undocumented public __init__
    "D203",   # allow 0 black lines before class docstring
    "D213",   # allow multiline docstring to start on first line
    "COM812", # allow missing trailing comma in type annotation
    "E501",   # don't enforce line length
    "N802", # allow uppercase in function names
    "N803", # allow uppercase in function args
    "N806", # allow uppercase in variable names
    "S301", # allow unpickling
    "ISC001", # disable as advised by "ruff format"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D", # allow missing docs
    "PLR2004", # allow magic numbers
    "S101", # allow asserts
    "SLF001", # allow accessing private methods
    "T201", # allow prints in tests
]
[tool.setuptools]
py-modules = ["pyglaze"]

