[project]
name = "pyglaze"
version = "0.5.0"
description = "Pyglaze is a library used to operate the devices of Glaze Technologies"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "GLAZE Technologies ApS"},
]
requires-python = ">=3.9,<3.14"

dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "pyserial>=3.5",
    "scipy>=1.7.3",
    "typing_extensions>=4.12.2",
    "protobuf>=6.33.0",
    "cobs>=1.2.1",
    "crccheck>=1.3.1",
]

[project.optional-dependencies]
build = [
    "build>=1.2.1",
    "twine>=5.1.1",
    "bumpver>=2023.1129",
]
test = [
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
]
docs = [
    "mkdocs>=1.2.3",
    "mkdocs-material>=8.2.5",
    "mkdocstrings[python]>=0.18.1",
    "mike>=1.1.2",
    "Pygments>=2.12.0",
    "matplotlib>=3.7.0",
    "bumpver>=2023.1129",
]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.13",
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
    "semver>=2.13.0",
    "types-pyserial>=3.5.0.8",
    "mypy-protobuf>=3.6.0",
    "bumpver>=2023.1129",
]

[project.urls]
Homepage = "https://www.glazetech.dk/"
Documentation = "https://glazetech.github.io/pyglaze/latest"
Repository = "https://github.com/GlazeTech/pyglaze"
Issues = "https://github.com/GlazeTech/pyglaze/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
addopts = [
    "--cov=pyglaze", 
    "--import-mode=importlib",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:", # type checking is turned off at runtime
    "@(abc\\.)?abstractmethod", # abstract methods aren't executed
    ]

[tool.ruff]
target-version = "py39"
extend-exclude = ["src/pyglaze/mimlink/proto/envelope_pb2.py", "src/pyglaze/mimlink/proto/envelope_pb2.pyi"]
lint.select = ["ALL"]
lint.ignore = [
    "D100",   # allow undocumented public modules
    "D104",   # allow undocumented public package
    "D106",   # allow undocumented public nested class
    "D107",   # allow undocumented public __init__
    "D203",   # allow 0 black lines before class docstring
    "D213",   # allow multiline docstring to start on first line
    "COM812", # allow missing trailing comma in type annotation
    "E501",   # don't enforce line length
    "N802", # allow uppercase in function names
    "N803", # allow uppercase in function args
    "N806", # allow uppercase in variable names
    "S301", # allow unpickling
    "ISC001", # disable as advised by "ruff format"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D", # allow missing docs
    "PLR2004", # allow magic numbers
    "S101", # allow asserts
    "SLF001", # allow accessing private methods
    "T201", # allow prints in tests
    "ARG005", # allow unused callback args in tests
    "FBT003", # allow positional booleans in protocol matrix tests
]
"src/pyglaze/devtools/mock_device.py" = [
    "C901", # protocol handler branching reflects message dispatch
    "PLR0911", # early returns keep command handlers readable
    "PLR0912", # branch count is expected for protocol simulation
    "PLR0913", # constructor accepts explicit scenario knobs
]

[tool.bumpver]
current_version = "0.5.0"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "BUMP VERSION {old_version} -> {new_version}"
tag_message = "v{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/pyglaze/__init__.py" = [
    '__version__ = "{version}"',
]
"docs/index.md" = [
    '**Documentation Version**: {version}'
]

[tool.ty.environment]
extra-paths = ["typestubs"]

[tool.ty.rules]
unused-ignore-comment = "error"

[[tool.ty.overrides]]
include = ["src/pyglaze/mimlink/proto/*.pyi"]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"  # mypy-protobuf stubs reference _EnumTypeWrapper which ty can't resolve

[tool.ty.terminal]
error-on-warning = true
